--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 	],
 	"require":
 	{
-		"silverstripe/framework": ">=3.1.x-dev,<4.0",
-		"silverstripe/cms": ">=3.1.x-dev,<4.0",
-		"swipestripe/swipestripe": "2.1.*"
+		"silverstripe/framework": ">=3.1,<4.0",
+		"silverstripe/cms": ">=3.1,<4.0",
+		"swipestripe/swipestripe": ">=2.0.*"
 	},
 	"support": 
 	{
